# copick-easymode

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  release-please.config.json
.github/: dependabot.yml
.github/workflows/: conventional-commits.yml  py-formatting.yml  release-please.yml
src/copick_easymode/cli/: __init__.py  inference.py
src/copick_easymode/core/: __init__.py  inference.py  models.py
