[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "copick-easymode"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
    "click>=8.1.8",
    "copick>=0.8.0",
    "easymode",
    "numpy>=2.0.2",
    "scipy>=1.10.0",
    "tensorflow>=2.10.0",
]
authors = [
    { name = "Utz H. Ermel", email = "utz.ermel@czii.org" },
]
description = "Easymode pretrained segmentation integration for copick CLI."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["cryoet", "cryo-et", "segmentation", "copick", "easymode", "deep-learning"]

[project.urls]
Repository = "https://github.com/copick/copick-easymode.git"
Issues = "https://github.com/copick/copick-easymode/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.0",
]

[project.entry-points."copick.inference.commands"]
easymode = "copick_easymode.cli.inference:easymode"

[tool.hatch.version]
path = "src/copick_easymode/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120
target_version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "B",       # bugbear
    "I",       # isort
    "N",       # pep8-naming
    "ASYNC",   # async
    "COM",     # commas
    "C4",      # comprehensions
    "DTZ",     # datetimez
    "ISC",     # implicit-str-concat
    "G",       # logging-format
    "T20",     # print
    "SIM",     # simplify
]
ignore = [
    "G004",   # logging format
    "W293",   # blank line contains whitespace
    "B008",   # Do not perform calls in argument defaults
    "N802",   # Function name should be lowercase
    "N805",   # First argument of a method should be named `self`
    "N806",   # Variable in function should be lowercase
    "N999",   # Invalid module name
    "E501",   # line too long
    "C408",   # rewrite empty built-ins as literals
    "T201",   # print statements.
    "DTZ007", # Datetime objects without timezones.
    "DTZ005", # More datetimes without timezones.
]

[tool.ruff.lint.isort]
known-first-party = ["copick_easymode"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
