[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "copick-easymode"
# Floor only: the thin CLI wrapper is pure-Python and imports its heavy deps
# (easymode/TensorFlow) lazily, so it installs (e.g. `--no-deps` for CLI-docs
# introspection) on any modern Python. A full install still needs an
# easymode/TensorFlow-compatible interpreter.
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dynamic = ["version"]
dependencies = [
    "click>=8.1.8",
    "copick>=1.20.0",
    "easymode @ git+https://github.com/mgflast/easymode.git",
    "numpy>=2.0.2",
    "scipy>=1.10.0",
    "tensorflow>2.11.0",
]
authors = [
    { name = "Utz H. Ermel", email = "utz@ermel.me" },
]
description = "Easymode pretrained segmentation integration for copick CLI."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["cryoet", "cryo-et", "segmentation", "copick", "easymode", "deep-learning"]

[project.urls]
Repository = "https://github.com/copick/copick-easymode.git"
Issues = "https://github.com/copick/copick-easymode/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.0",
]

[project.entry-points."copick.inference.commands"]
easymode = "copick_easymode.cli.inference:easymode"

[tool.hatch.version]
path = "src/copick_easymode/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120
target_version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "B",       # bugbear
    "I",       # isort
    "N",       # pep8-naming
    "ASYNC",   # async
    "COM",     # commas
    "C4",      # comprehensions
    "DTZ",     # datetimez
    "ISC",     # implicit-str-concat
    "G",       # logging-format
    "T20",     # print
    "SIM",     # simplify
]
ignore = [
    "G004",   # logging format
    "W293",   # blank line contains whitespace
    "B008",   # Do not perform calls in argument defaults
    "N802",   # Function name should be lowercase
    "N805",   # First argument of a method should be named `self`
    "N806",   # Variable in function should be lowercase
    "N999",   # Invalid module name
    "E501",   # line too long
    "C408",   # rewrite empty built-ins as literals
    "T201",   # print statements.
    "DTZ007", # Datetime objects without timezones.
    "DTZ005", # More datetimes without timezones.
]

[tool.ruff.lint.isort]
known-first-party = ["copick_easymode"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
